tp1/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK18~1.0_1\bin\javadoc.exe
-sourcepath
C:\sharing\nfp121.tp1\tp1
-classpath
C:\BlueJ\lib\bluejcore.jar;C:\BlueJ\lib\junit.jar;C:\sharing\nfp121.tp1\tp1
-d
C:\sharing\nfp121.tp1\tp1\doc
-source
1.8
-doctitle
tp1
-windowtitle
tp1
-link
http://java.sun.com/javase/6/docs/api/
-author
-version
-nodeprecated
-package
question3
question2
question1
<---- end of javadoc command ---->
Loading source files for package question3...
Loading source files for package question2...
Loading source files for package question1...
Constructing Javadoc information...
Standard Doclet version 1.8.0_111
Building tree for all the packages and classes...
C:\sharing\nfp121.tp1\tp1\question3\AuditeurCNAM.java:8: error: unexpected text
 * @see java.lang.String, java.lang.Math
   ^
C:\sharing\nfp121.tp1\tp1\question3\AuditeurCNAM.java:10: warning - Tag @see: malformed: "java.lang.String, java.lang.Math"
Generating C:\sharing\nfp121.tp1\tp1\doc\question3\AuditeurCNAM.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question3\AuditeurCNAMTest.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question2\Picture.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\Canvas.html...
C:\sharing\nfp121.tp1\tp1\question1\Canvas.java:29: warning: no @return
    public static Canvas getCanvas() {
                         ^
C:\sharing\nfp121.tp1\tp1\question1\Canvas.java:129: error: @param name not found
     * @param newColour
              ^
C:\sharing\nfp121.tp1\tp1\question1\Canvas.java:132: warning: no @param for colorString
    public void setForegroundColor(String colorString) {
                ^
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\Circle.html...
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:78: warning: no @param for distance
    public void moveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:87: warning: no @param for distance
    public void moveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:96: warning: no @param for distance
    public void slowMoveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:115: warning: no @param for distance
    public void slowMoveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:132: error: bad use of '>'
     * Change the size to the new size (in pixels). Size must be >= 0.
                                                                 ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:134: warning: no @param for newDiameter
    public void changeSize(int newDiameter) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Circle.java:144: warning: no @param for newColor
    public void changeColor(String newColor) {
                ^
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\Square.html...
C:\sharing\nfp121.tp1\tp1\question1\Square.java:77: warning: no @param for distance
    public void moveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:86: warning: no @param for distance
    public void moveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:95: warning: no @param for distance
    public void slowMoveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:114: warning: no @param for distance
    public void slowMoveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:131: error: bad use of '>'
     * Change the size to the new size (in pixels). Size must be >= 0.
                                                                 ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:133: warning: no @param for newSize
    public void changeSize(int newSize) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Square.java:143: warning: no @param for newColor
    public void changeColor(String newColor) {
                ^
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\Triangle.html...
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:79: warning: no @param for distance
    public void moveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:88: warning: no @param for distance
    public void moveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:97: warning: no @param for distance
    public void slowMoveHorizontal(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:116: warning: no @param for distance
    public void slowMoveVertical(int distance) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:133: error: bad use of '>'
     * Change the size to the new size (in pixels). Size must be >= 0.
                                                                 ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:135: warning: no @param for newHeight
    public void changeSize(int newHeight, int newWidth) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:135: warning: no @param for newWidth
    public void changeSize(int newHeight, int newWidth) {
                ^
C:\sharing\nfp121.tp1\tp1\question1\Triangle.java:146: warning: no @param for newColor
    public void changeColor(String newColor) {
                ^
Generating C:\sharing\nfp121.tp1\tp1\doc\overview-frame.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\package-frame.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\package-summary.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question1\package-tree.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question2\package-frame.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question2\package-summary.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question2\package-tree.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question3\package-frame.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question3\package-summary.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\question3\package-tree.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\constant-values.html...
Building index for all the packages and classes...
Generating C:\sharing\nfp121.tp1\tp1\doc\overview-tree.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\index-all.html...
Building index for all classes...
Generating C:\sharing\nfp121.tp1\tp1\doc\allclasses-frame.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\allclasses-noframe.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\index.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\overview-summary.html...
Generating C:\sharing\nfp121.tp1\tp1\doc\help-doc.html...
5 errors
22 warnings
